// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Room display renders correctly 1`] = `
<div
  className="card"
  id="Card-field"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "maxWidth": "50vh",
      "width": "90%",
    }
  }
>
  <h5
    className="text-center card-header"
    id="Card-Header"
    style={
      Object {
        "width": "100%",
      }
    }
  >
     
    Members
  </h5>
  <div
    className="card-body"
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": "auto !important",
        "marginTop": "0 !important",
        "maxHeight": "60vh",
        "overflowY": "auto",
        "paddingLeft": "1em",
        "paddingRight": "1em",
        "width": "100%",
      }
    }
  >
    <div
      className="spinner-border"
    />
  </div>
  <div
    className="card-footer"
    id="Card-Footer"
  />
</div>
`;

exports[`User info display renders correctly 1`] = `
<div
  className="card"
  id="Card-field"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#7e828b",
      "justifyContent": "center",
      "margin": "1em",
      "width": "90%",
    }
  }
>
  <h5
    className="text-center card-header"
    id="Card-Header"
    style={
      Object {
        "width": "100%",
      }
    }
  >
     
    Leon
     
  </h5>
  <div
    className="card-body"
    style={
      Object {
        "alignItems": "start",
        "justifyContent": "start",
        "width": "100%",
      }
    }
  >
    <form
      className=""
    >
      <p>
        Number: 
        N/A
      </p>
      <br />
      <p>
        Email: 
        N/A
      </p>
      <br />
    </form>
  </div>
</div>
`;
